--- a/.project
+++ b/.project
@@ -26,4 +26,11 @@
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 		<nature>org.eclipse.wst.common.project.facet.core.nature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src/main/resources/WEB-INF/car.jpg</name>
+			<type>1</type>
+			<location>C:/Users/Adam/EclipseProjects/workspace-carservice/carservice/src/main/resources/WEB-INF/car.jpg</location>
+		</link>
+	</linkedResources>
 </projectDescription>
